ini changes for my boards: flash IP, debug, CDC_ON_BOOT=1

--- a/platformio.ini
+++ b/platformio.ini
@@ -495,9 +495,33 @@ upload_speed = 921600 ; or  460800
 build_unflags = ${common.build_unflags}
 build_flags = ${common.build_flags} ${esp32s3.build_flags} -D WLED_RELEASE_NAME=ESP32-S3_8MB
   -D CONFIG_LITTLEFS_FOR_IDF_3_2 -D WLED_WATCHDOG_TIMEOUT=0
-  -D ARDUINO_USB_CDC_ON_BOOT=0  ;; -D ARDUINO_USB_MODE=1 ;; for boards with serial-to-USB chip
-  ;-D ARDUINO_USB_CDC_ON_BOOT=1 ;; -D ARDUINO_USB_MODE=1 ;; for boards with USB-OTG connector only (USBCDC or "TinyUSB")
-  ;-D WLED_DEBUG
+  ;-D ARDUINO_USB_CDC_ON_BOOT=0  ;; -D ARDUINO_USB_MODE=1 ;; for boards with serial-to-USB chip
+  -D ARDUINO_USB_CDC_ON_BOOT=1 ;; -D ARDUINO_USB_MODE=1 ;; for boards with USB-OTG connector only (USBCDC or "TinyUSB")
+  -D WLED_DEBUG
+  -D USERMOD_PIRSWITCH
+lib_deps = ${esp32s3.lib_deps}
+board_build.partitions = tools/WLED_ESP32_8MB.csv
+board_build.f_flash = 80000000L
+board_build.flash_mode = qio
+; board_build.flash_mode = dio   ;; try this if you have problems at startup
+monitor_filters = esp32_exception_decoder
+
+[env:esp32s3dev_8MB_OTA]
+upload_protocol = espota
+# exchange for your WLED IP
+upload_port = "192.168.0.22"
+;; ESP32-S3-DevKitC-1 development board, with 8MB FLASH, no PSRAM (flash_mode: qio)
+board = esp32-s3-devkitc-1
+platform = ${esp32s3.platform}
+platform_packages = ${esp32s3.platform_packages}
+upload_speed = 921600 ; or  460800
+build_unflags = ${common.build_unflags}
+build_flags = ${common.build_flags} ${esp32s3.build_flags} -D WLED_RELEASE_NAME=ESP32-S3_8MB
+  -D CONFIG_LITTLEFS_FOR_IDF_3_2 -D WLED_WATCHDOG_TIMEOUT=0
+  ;-D ARDUINO_USB_CDC_ON_BOOT=0  ;; -D ARDUINO_USB_MODE=1 ;; for boards with serial-to-USB chip
+  -D ARDUINO_USB_CDC_ON_BOOT=1 ;; -D ARDUINO_USB_MODE=1 ;; for boards with USB-OTG connector only (USBCDC or "TinyUSB")
+  -D WLED_DEBUG
+  ;-D WLED_DEBUG_HOST='"192.168.0.5"'
 lib_deps = ${esp32s3.lib_deps}
 board_build.partitions = tools/WLED_ESP32_8MB.csv
 board_build.f_flash = 80000000L
@@ -582,7 +606,7 @@ lib_deps = ${esp8266.lib_deps}
 board = d1_mini
 upload_protocol = espota
 # exchange for your WLED IP
-upload_port = "10.10.1.27"
+upload_port = "192.168.0.17"
 platform = ${common.platform_wled_default}
 platform_packages = ${common.platform_packages}
 board_build.ldscript = ${common.ldscript_4m1m}
