Disable some unwanted protocols

--- a/platformio.ini
+++ b/platformio.ini
@@ -138,6 +138,11 @@ build_flags =
   ; -D USERMOD_SENSORSTOMQTT
   #For ADS1115 sensor uncomment following
   ; -D USERMOD_ADS1115
+  -D WLED_DISABLE_ALEXA
+  -D WLED_DISABLE_HUESYNC
+  -D WLED_DISABLE_INFRARED
+  -D WLED_DISABLE_MQTT
+  -D WLED_DISABLE_2D
 
 build_unflags =
 
